<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill_vertical"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/light_blue"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="-1dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="125dp"
            android:fontFamily="@font/dynap"
            android:gravity="center"
            android:paddingTop="38dp"
            android:text="@string/mesaje_de_inicio"
            android:textColor="@color/white"
            android:textSize="29sp"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/icono_persona"
            android:orientation="vertical"
            android:paddingStart="280dp"
            android:paddingTop="29dp"
            android:paddingEnd="0dp"
            android:src="@drawable/ic_person"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/ic_wave"
        tools:ignore="MissingConstraints" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:letterSpacing="0.01"
            android:text="@string/login"
            android:fontFamily="@font/sans_pro"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="45sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            app:boxBackgroundColor="@color/white"
            android:hint="@string/mail"
            app:endIconMode="clear_text"
            app:helperText="*Ingrese su email"
            app:helperTextTextColor="@color/red"
            app:startIconDrawable="@drawable/ic_email"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="25dp"
            app:boxBackgroundColor="@color/white"
            android:hint="@string/password"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:endIconMode="password_toggle"
            app:helperText="*Ingrese su contraseña"
            app:helperTextTextColor="@color/red"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnEntrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/style_button"
            android:text="@string/btn_continuar"
            android:fontFamily="@font/sans_pro"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:backgroundTint="@null" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sans_pro"
                android:text="¿ERES NUEVO?"
                android:layout_marginStart="80dp"
                android:layout_marginTop="40dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="55dp"
                android:background="@drawable/button_crear_cuenta"
                android:fontFamily="@font/sans_pro"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:text="Crear cuenta"
                android:textAlignment="textStart"
                android:textColor="#00b4ff"
                android:textSize="15sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>