<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill_vertical"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".IniciarSesión">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/light_blue"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="-1dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="125dp"
            android:fontFamily="@font/dynap"
            android:gravity="center"
            android:paddingTop="38dp"
            android:text="INGRESA A TU CUENTA"
            android:textColor="@color/white"
            android:textSize="35sp"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/icono_persona"
            android:orientation="vertical"
            android:paddingStart="280dp"
            android:paddingTop="29dp"
            android:paddingEnd="0dp"
            android:src="@drawable/ic_person"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/ic_wave"
        tools:ignore="MissingConstraints" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:letterSpacing="0.01"
            android:text="@string/login"
            android:fontFamily="@font/sans_pro"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="45sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/mail"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxBackgroundColor="@color/white"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/black"
            app:startIconContentDescription="email"
            app:hintTextColor="@color/black"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:helperText="*Ingrese su email"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:helperTextTextColor="@color/red"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/campoEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="25dp"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxBackgroundColor="@color/white"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:counterTextColor="@color/black"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:helperText="*Ingrese su contraseña"
            app:helperTextTextColor="@color/red"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:startIconTint="@color/black"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:startIconContentDescription="contraseña">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/campoContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnEntrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/style_button"
            android:text="@string/btn_continuar"
            android:fontFamily="@font/sans_pro"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:backgroundTint="@null" />

    </LinearLayout>
</LinearLayout>